# frida-analykit

./: .gitignore  AGENTS.MD  Makefile  PRE_README.MD  README.md  README_EN.md  package-lock.json  package.json  pyproject.toml  release-version.toml  tsconfig.json
.github/workflows/: ci.yml  release-backfill.yml  release-rc.yml  release.yml
docs/: arch.mermaid  device-regression.md  elf-fixups.md  release-process.md
release/: frida-builds.toml
scripts/: dev_env.py  env.py  release_assets.py  release_ci.py  release_version.py
src/frida_analykit/: DESIGN_SPEC.MD  _version.py  cli.py  compat.py  config.py  dev_env.py  diagnostics.py  frontend.py  logging.py  release_version.py  repl.py  scaffold.py  server.py  session.py  utils.py  workspace.py
tests/: test_agent_device_tests_package.py  test_agent_package.py  test_cli.py  test_compat.py  test_config.py  test_dev_env.py  test_device_collection.py  test_device_doctor.py  test_device_helpers_runtime.py  test_device_helpers_workspace.py  test_device_orchestrator.py  test_device_runtime.py  test_device_test_app.py  test_env.py  test_js_handle.py  test_logging.py  test_makefile_dev_env.py  test_makefile_env.py  test_makefile_release_version.py  test_release_assets.py  test_release_version_script.py  test_rpc.py  test_rpc_exports.py  test_scaffold.py  test_server.py  test_session.py  test_smoke.py
tests/agent/: test_device_tests_package.py  test_package.py
tests/android_test_app/: gradlew  gradlew.bat  settings.gradle
tests/cli/: support.py  test_doctor.py  test_entrypoint.py  test_env_commands.py  test_server_commands.py  test_spawn_attach.py
tests/core/: test_config.py  test_smoke.py  (+2 more)
(+152 files in other folders)
